# WitcherLib

./: .buildinfo  .gitignore  README.md  advanced_usage.html  api.html  changelog.html  donate.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  witcher_universe.html
.github/workflows/: docs.yml  publish.yml
_sources/: advanced_usage.rst.txt  changelog.rst.txt  index.rst.txt  installation.rst.txt
docs/source/: api.rst  conf.py  donate.rst  index.rst  installation.rst  quickstart.rst  witcher_universe.rst
src/: witcher.py
