[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "witcherLib"
version = "0.1.2"
authors = [
  { name="22skowron", email="author@example.com" },
]
description = "Fictional Python library inspired by The Witcher universe."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/22skowron/WitcherLib"
Documentation = "https://22skowron.github.io/WitcherLib"
Repository = "https://github.com/22skowron/WitcherLib"
Issues = "https://github.com/22skowron/WitcherLib/issues"